--- a/templates/prive/_header.html.twig
+++ b/templates/prive/_header.html.twig
@@ -17,7 +17,23 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ path('app_recette')}}">Recettes
             </a>
-          </li>    
+          </li> 
+          {# connexion si pas loggué #}
+          {% if is_granted("ROLE_ADMIN") %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ path('app_logout')}}">Déconnexion
+              </a>
+            </li> 
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ path('app_login')}}">Connexion
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ path('app_register')}}">Inscription
+              </a>
+            </li>  
+          {% endif %}
       </div>
     </div>
   </nav>
