--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,8 +4,10 @@
 
 {% block body %}
 
-<div class="example-wrapper">
-    <h1>Accueil</h1>
-
-</div>
+<div class="jumbotron text-center">
+    <h1 class="display-4">Accueil</h1>
+    <hr class="my-4">
+    <p>Bienvenue sur le site des recettes.</p>
+   
+  </div>
 {% endblock %}
