--- a/templates/prive/_header.html.twig
+++ b/templates/prive/_header.html.twig
@@ -1,39 +1,51 @@
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-primary d-flex" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_home')}}">Accueil
-            </a>
-          </li>   
-          <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_ingredient')}}">Ingrédients
-            </a>
-          </li>   
-          <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_recette')}}">Recettes
-            </a>
-          </li> 
-          {# connexion si pas loggué #}
-          {% if is_granted("ROLE_ADMIN") %}
+      
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <div class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_logout')}}">Déconnexion
+              <a class="nav-link" href="{{ path('app_home')}}">Accueil
+              </a>
+            </li>   
+            <li class="nav-item">
+              <a class="nav-link" href="{{ path('app_ingredient')}}">Ingrédients
+              </a>
+            </li>   
+            <li class="nav-item">
+              <a class="nav-link" href="{{ path('app_recette')}}">Recettes
               </a>
             </li> 
-          {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_login')}}">Connexion
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ path('app_register')}}">Inscription
-              </a>
-            </li>  
-          {% endif %}
+          </div>
+          <div class="navbar-nav connect d-flex justify-content-end">
+              {# connexion si pas connecté #}
+              {% if app.user %}
+              {% if is_granted("ROLE_ADMIN") %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ path('app_admin')}}">Admin
+                  </a>
+                </li>
+              {% endif %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_logout')}}">Déconnexion
+                </a>
+              </li>
+              {% else %}
+              {# si connecté #}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_login')}}">Connexion
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_register')}}">Inscription
+                </a>
+              </li>  
+              {% endif %}
+          </div>
+    
       </div>
     </div>
   </nav>
